--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gsap": "^3.12.2",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-scroll-parallax": "^3.4.3"
   },
   "devDependencies": {
     "@types/node": "^20",
