--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
+    "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "next": "13.5.6",
     "react": "^18",
