--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,13 +27,17 @@ jobs:
       - name: Showing Off 
         run: |
           ls
-      - name: copy
-        uses: garygrossgarten/github-action-scp@v0.8.0
-        with: 
-          local: ./myimageLatest.tar
-          remote: ${{ env.CONTABO_IP }}
-          username: root
-          password: ${{ secrets.CONTABO_PWD }}
+      - name: Username
+        run: |
+          echo ${{ env.CONTABO_USERNAME }}
+      - name: Copy files to remote server
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ env.CONTABO_IP }}
+          username: ${{ secrets.CONTABO_USERNAME }}
+          key: ${{ secrets.CONTABO_PWD }}
+          source: "myimageLatest.tar"
+          target: "~"
          
             
 
