--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,17 +27,17 @@ jobs:
       - name: Showing Off 
         run: |
           ls
-      - name: Username
+      - name: ip
         run: |
-          echo ${{ env.CONTABO_USERNAME }}
+          echo ${{ env.CONTABO_IP }}
       - name: Copy files to remote server
-        uses: appleboy/scp-action@master
+        uses: garygrossgarten/github-action-scp@v0.8.0
         with:
           host: ${{ env.CONTABO_IP }}
           username: ${{ secrets.CONTABO_USERNAME }}
-          key: ${{ secrets.CONTABO_PWD }}
-          source: "myimageLatest.tar"
-          target: "~"
+          password: ${{ secrets.CONTABO_PWD }}
+          local: "./myimageLatest.tar"
+          remote_dir: "~"
          
             
 
