--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -37,7 +37,7 @@ jobs:
           username: ${{ secrets.CONTABO_USERNAME }}
           password: ${{ secrets.CONTABO_PWD }}
           local: "./myimageLatest.tar"
-          remote_dir: "~"
+          remote: "~"
          
             
 
