--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Copy files to remote server
         uses: garygrossgarten/github-action-scp@v0.8.0
         with:
-          host: ${{ env.CONTABO_IP }}
-          username: ${{ secrets.CONTABO_USERNAME }}
+          host: 31.220.89.68
+          username: root
           password: ${{ secrets.CONTABO_PWD }}
           local: "./myimageLatest.tar"
           remote: "~"
