--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -38,13 +38,13 @@ jobs:
           password: ${{ secrets.CONTABO_PWD }}
           local: ./myimageLatest.tar
           remote: /root/myimageLatest.tar
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.0
+      - name: executing remote ssh commands using password
+        uses: appleboy/ssh-action@v1.0.0
         with:
-          ssh-private-key: ${{ secrets.CONTABO_SSH_PRIVATE }}
-      - name: Run command on remote server
-        run: |
-          ssh root@31.220.89.68 'pwd'
-         
+          host: 31.220.89.68
+          username: root
+          password: ${{ secrets.CONTABO_PWD }}
+          port: 22
+          script: whoami
             
 
