--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.3",
     "@studio-freight/lenis": "^1.0.29",
+    "@studio-freight/react-lenis": "^0.0.38",
     "framer-motion": "^10.16.5",
     "gsap": "^3.12.2",
     "next": "13.5.6",
