--- a/package.json
+++ b/package.json
@@ -12,18 +12,20 @@
     "@react-spring/parallax": "^9.7.3",
     "@studio-freight/lenis": "^1.0.29",
     "@studio-freight/react-lenis": "^0.0.38",
-    "framer-motion": "^10.16.5",
+    "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-scroll-parallax": "^3.4.3"
+    "react-scroll-parallax": "^3.4.3",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "mini-css-extract-plugin": "^2.7.6",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
