--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "react-scroll-parallax": "^3.4.3",
     "sass": "^1.69.5"
   },
