--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@rive-app/react-canvas": "^4.7.0",
     "@studio-freight/lenis": "^1.0.29",
     "@studio-freight/react-lenis": "^0.0.38",
+    "@types/nodemailer": "^6.4.14",
+    "date-fns-tz": "^2.0.0",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
     "next": "13.5.6",
+    "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
