--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@studio-freight/lenis": "^1.0.29",
     "@studio-freight/react-lenis": "^0.0.38",
     "@types/nodemailer": "^6.4.14",
-
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
+    "moment-timezone": "^0.5.44",
     "next": "13.5.6",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-live-clock": "^6.1.19",
+    "react-moment": "^1.1.3",
     "react-scroll-parallax": "^3.4.3",
     "sass": "^1.69.5"
   },
