--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@rive-app/react-canvas": "^4.7.0",
     "@studio-freight/lenis": "^1.0.29",
     "@studio-freight/react-lenis": "^0.0.38",
+    "@tabler/icons-react": "^3.1.0",
     "@types/nodemailer": "^6.4.14",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
