--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gsap": "^3.12.2",
     "moment-timezone": "^0.5.44",
     "next": "13.5.6",
+    "next-intl": "^3.11.0",
     "nodemailer": "^6.9.8",
     "react": "^18",
     "react-dom": "^18",
