--- a/src/projects.json
+++ b/src/projects.json
@@ -15,7 +15,7 @@
 			"de-AT": "Ein Projekt für einen lokalen Videoschnitt-Editor, einschließlich eines groben Portfolios und eines Kontaktbereichs. Der Fokus lag hier hauptsächlich darauf, alternative und moderne Möglichkeiten zur Darstellung von Inhalten zu nutzen, damit die Website sich von Mitbewerbern abhebt und einen bleibenden Eindruck hinterlässt.",
 			"en-US": "A project for a local video editor including a rough portfolio and a contact section. The focus here was mostly on using alternative and modern ways of displaying content so the website would elevate over any competitors and leave a lasting impression."
 		},
-		"link": "You can check out the work on <a href=\"https://framestudio.at\">framestudio.at</a>",
+		"link": "<a href=\"https://framestudio.at\">framestudio.at</a>",
 		"images":[
 			"https://upload.wikimedia.org/wikipedia/commons/6/63/Cerebral_Angiogram_Lateral.jpg",
 			"https://upload.wikimedia.org/wikipedia/commons/6/63/Cerebral_Angiogram_Lateral.jpg",
