--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/nodemailer": "^6.4.14",
     "framer-motion": "^10.16.16",
     "gsap": "^3.12.2",
+    "iso-639-1": "^3.1.2",
     "moment-timezone": "^0.5.44",
     "next": "13.5.6",
     "next-intl": "^3.11.0",
